test/soft-contract/ill-typed/foldr1.caprice
(* TEST
  include refutable;
*)

(* error is that xs should be nonempty *)

let rec foldr1 (type a) (f : a -> a -> a) (xs : list a) : a =
  match xs with
  | z :: [] -> z
  | z :: zs -> f z (foldr1 a f zs)
  (* ERROR: xs chould be empty *)
  end
